# simple-mcs

./: CMakeLists.txt  Include.cmake  Install.cmake
application/: CMakeLists.txt
application/UcomMsg/include/: psNcuUcomMsg.h
application/UcomMsg/source/: psNcuUcomMsg.c
application/heart/include/: psNcuHeartBeatProc.h  psNcuNWDAFAddrProc.h
application/heart/source/: psNcuHeartBeatProc.c  psNcuNWDAFAddrProc.c
application/httplink/include/: psNcuHttpLinkProc.h
application/httplink/source/: psNcuHttpLinkProc.cpp
application/pktsolve/include/: psNcuDataAnalysis.h  psNcuPktParse.h  psNcuPktSolveFunc.h  psNcuStreamProc.h  psNcuTcpCalcProc.h
application/pktsolve/source/: psNcuDataAnalysis.c  psNcuPktParse.c  psNcuPktSolveFunc.c  psNcuStreamProc.c  psNcuTcpCalcProc.c
application/report/include/: psNcuMonitor.h  psNcuMultiReport.h  psNcuReport.h  psNcuReportSBCProc.h  psNcuReportTimer.h  psNcuReportUDPProc.h
application/report/source/: psNcuMonitor.c  psNcuMultiReport.c  psNcuReport.c  psNcuReportSBCProc.c  psNcuReportTimer.c  psNcuReportUDPProc.c
application/subscribe/include/: psNcuSubscribeProc.h
application/subscribe/source/: psNcuSubscribeProc.c
application/trace/include/: psNcuSigTrace.h  ps_mcs_trace.h
application/trace/source/: psNcuSigTrace.c
ctrl/: CMakeLists.txt
ctrl/gdmm/include/: gdmmJobEnterFunc.h  psNcuDbgCollReg.h  psNcuDbgReport.h  ps_gdmm_ncu_entry.h  ps_gdmm_upf_def.h
ctrl/gdmm/source/: gdmmJobEnterFunc.c  psNcuDbgCollReg.c  psNcuDbgReport.c  ps_gdmm_ncu_entry.c
ctrl/job/include/: psMcsManageJob.h
ctrl/job/source/: psMcsManageDebug.c  psMcsManageJob.c
domain/: CMakeLists.txt
domain/common/: CMakeLists.txt
domain/common/dbapp/commTable/include/: r_ncu_applicationmap.h  r_ncu_dadial.h  r_ncu_daprofile.h  r_ncu_subbindapp.h
domain/common/dbapp/commTable/source/: r_ncu_applicationmap.c  r_ncu_dadial.c  r_ncu_daprofile.c  r_ncu_subbindapp.c
domain/common/dbapp/dbaccess/include/: psNcuApplicationMapCtxProc.h  psNcuDADialCtxProc.h  psNcuDAProfileCtxProc.h  psNcuSnCtxProc.h  psNcuSubBindAppCtxProc.h  psNcuSubscribeCtxProc.h
domain/common/dbapp/dbaccess/source/: psNcuApplicationMapCtxProc.c  psNcuDADialCtxProc.c  psNcuDAProfileCtxProc.c  psNcuSnCtxProc.c  psNcuSubBindAppCtxProc.c  psNcuSubscribeCtxProc.c
domain/common/dbapp/entryFunc/include/: psDbCommonDynTables.h  psDbMcsDynTables.h  psNcuCtxFunc.h  sdb_ncudynlib.h
domain/common/dbapp/entryFunc/source/: psDbCommonDynTables.c  psDbMcsDynTables.c  psNcuCtxFunc.c  sdb_ncudynlib.c
domain/common/dbapp/mcsTable/include/: ncu_capacity.h  ps_ncu_dataApp.h  ps_ncu_httplink.h  ps_ncu_session.h  ps_ncu_stream.h  ps_ncu_subscribe.h  r_ncu_sn.h
domain/common/dbapp/mcsTable/source/: ncu_capacity.c  ps_ncu_dataApp.c  ps_ncu_httplink.c  ps_ncu_session.c  ps_ncu_stream.c  ps_ncu_subscribe.c  r_ncu_sn.c
domain/common/dbcfg/include/: ApplicationMapCfg.h  DaDialCfg.h  DaHttpCfg.h  DaProfileCfg.h  DaSysLinkCfg.h  DaUpfCfg.h  DataAnalysSysCfg.h  FailTraceCfg.h  FlowAgeingTimeCfg.h  HttpProfileCfg.h  NcuDangerousOpCfg.h  NcuSoftParaCfg.h  ResourceAgeCfg.h  SigTraceCfg.h  SigTraceTaskCfg.h  SimpleCfgRegister.h  SubBindAppCfg.h  UpAssocAddrCfg.h  psMcsGlobalCfg.h  psMcsLicenseCfg.h  psNcuGetCfg.h  psNcuSCCUSCListChgNotify.h
domain/common/dbcfg/source/: ApplicationMapCfg.cpp  DaDialCfg.cpp  DaHttpCfg.cpp  DaProfileCfg.cpp  DaSysLinkCfg.cpp  DaUpfCfg.cpp  DataAnalysSysCfg.cpp  FailTraceCfg.cpp  FlowAgeingTimeCfg.cpp  HttpProfileCfg.cpp  NcuDangerousOpCfg.cpp  NcuSoftParaCfg.cpp  ResourceAgeCfg.cpp  SigTraceCfg.cpp  SigTraceTaskCfg.cpp  SimpleCfgRegister.cpp  SubBindAppCfg.cpp  UpAssocAddrCfg.cpp  psMcsLicenseCfg.cpp  psNcuGetCfg.c  psNcuSCCUSCListChgNotify.cpp
domain/common/memcfg/include/: MemShareCfg.h  ps_memsche.h
domain/common/memcfg/source/: MemShareCfg.c
domain/common/pmReport/include/: psNcuMcsPmReport.h
domain/common/pmReport/source/: ncu_pm_debug.c  psNcuMcsPmReport.c
domain/common/pub/: ps_job_define.h  ps_mcs_define.h
domain/common/sccuclient/include/: httpLbScInfo.h  ncuSCCUAbility.h  ncuUserGroup.h  pfuUserGroup.h
domain/common/sccuclient/source/: httpLbScInfo.c  ncuSCCUAbility.cpp  ncuUserGroup.cpp  pfuUserGroup.c
domain/model/: CMakeLists.txt
domain/model/encode/include/: psNcuDataEncode.h  psNcuReportStructData.h  psNcuReportStructHead.h  psNcuUliInfoFunc.h  psNefReportToNwdaf.h  ps_nef_interface.h
domain/model/encode/source/: psNcuDataEncode.c  psNcuUliInfoFunc.c  psNefReportToNwdaf.cpp
domain/model/reasm/include/: psNcuPktReasmProc.h
domain/model/reasm/source/: psNcuPktReasmProc.c
domain/utils/: CMakeLists.txt
domain/utils/route/include/: psNcuRouteProc.h
domain/utils/route/source/: psNcuRouteProc.c
entry/: main.c
infrastructure/: CMakeLists.txt
infrastructure/log/include/: UpfCfgUtils.h  psMcsDebug.h  psMcsRouteDebug.h  psMcsStatItemDef.h  psMcsSubScribeDebug.h  psMcsTestSend.h  psNcuCtrlStatInterface.h  psNcuCtrlStatItemDef.h  ps_ncu_typedef.h
infrastructure/log/source/: psMcsDebug.c  psMcsRouteDebug.c  psMcsSubScribeDebug.c  psMcsTestSend.c  psNcuCtrlStatInterface.c
ui/: CMakeLists.txt
ui/include/: dpaThreadCommon.h  psMcsEntry.h  psMcsEntryRegister.h  psMcsRegComm.h  psNcuScanMsgProc.h
ui/source/: dpaThreadCommon.c  psMcsEntry.c  psMcsEntryRegister.c  psMcsRegComm.c  psNcuScanMsgProc.c
